accreditation alignment fixed

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -10,16 +10,34 @@
   color: var(--tertiary);
 }
 
-.home>.main>.title {
+
+.home .main .title .titleleft h1{
+  margin-left: 80px;
+  margin-top: 60px;
+  width: 905px;
+  font-size: 35px;
+ font-weight: bold;
+ line-height: 43px;
+}
+.home .main .title .titleleft div{
+  width: 509px;
+  height: 91px;
+  font-size: 20px;
+  margin-left:242px;
+  margin-top:60px;
+  line-height: 35px;
+}
+
+/* .home>.main>.title {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
+} */
+/* 
 .home>.main>.title>img {
   width: 600px;
-  /* mix-blend-mode: darken; */
-}
+  /* mix-blend-mode: darken; 
+} */
 
 #after {
   position: relative;
@@ -121,13 +139,13 @@
   background-color: var(--secondary);
 }
 
-.home .title h2 {
+/* .home .title h2 {
   text-align: center;
-}
+} */
 
-.whyus h2 {
+/* .whyus h2 {
   margin: 25px 16px;
-}
+} */
 
 /* .whyusimgs{
   display: grid;
@@ -223,7 +241,7 @@
   width: 1175px;
   height: 150px;
   border:1px solid;
-  margin-top:-110px;
+  margin-top:-75px;
   z-index: 10;
   align-self: center;
   position: relative;
